rl_assortment_pkg/force-app/main/default/objects/Product2/fields/AEM_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>AEM_Image_URL__c</fullName>
    <description>CDN URL of the primary product image from Adobe Experience Manager</description>
    <label>AEM Primary Image URL</label>
    
    <type>Url</type>
</CustomField>