rl_assortment_pkg/force-app/main/default/objects/Product2/fields/AEM_Swatch_URL__c.field-meta.xml
<CustomField>
    <fullName>AEM_Swatch_URL__c</fullName>
    <description>CDN URL of the colour swatch thumbnail from AEM</description>
    <label>AEM Colour Swatch URL</label>
    
    <type>Url</type>
</CustomField>