rl_assortment_pkg/force-app/main/default/objects/Product2/fields/Anaplan_Material_ID__c.field-meta.xml
<CustomField>
    <fullName>Anaplan_Material_ID__c</fullName>
    <description>Anaplan material identifier used to match inbound sync data to this product record</description>
    <label>Anaplan Material ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>