rl_assortment_pkg/force-app/main/default/objects/Product2/fields/Colorway__c.field-meta.xml
<CustomField>
    <fullName>Colorway__c</fullName>
    <description>Colour description e.g. Camel Navy Ivory</description>
    <label>Colorway</label>
    <length>50</length>
    <type>Text</type>
</CustomField>