rl_assortment_pkg/force-app/main/default/objects/Product2/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <description>Ralph Lauren Family of Business</description>
    <label>Family of Business</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Outerwear</fullName>
        </value>
        <value>
            <fullName>Knitwear</fullName>
        </value>
        <value>
            <fullName>Bottoms</fullName>
        </value>
        <value>
            <fullName>Accessories</fullName>
        </value>
        <value>
            <fullName>Footwear</fullName>
        </value>
        <value>
            <fullName>Home</fullName>
        </value>
        <value>
            <fullName>Golf</fullName>
        </value>
        <value>
            <fullName>Childrenswear</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>