rl_assortment_pkg/force-app/main/default/objects/Product2/fields/Is_Hero_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Hero_Default__c</fullName>
    <description>Globally designated hero style across all accounts (can be overridden per assortment)</description>
    <label>Hero Style (Default)</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>