rl_assortment_pkg/force-app/main/default/objects/Product2/fields/Is_Prebook_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Prebook_Eligible__c</fullName>
    <description>Product is available for inclusion in prebook assortment plans</description>
    <label>Prebook Eligible</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>