rl_assortment_pkg/force-app/main/default/objects/Product2/fields/Is_VAS_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_VAS_Eligible__c</fullName>
    <description>Product supports value-added services such as embroidery or heat transfer</description>
    <label>VAS / Embroidery Eligible</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>