rl_assortment_pkg/force-app/main/default/objects/Product2/fields/RL_Category__c.field-meta.xml
<CustomField>
    <fullName>RL_Category__c</fullName>
    <description>Subcategory within FOB e.g. Topcoats Sweaters Chinos</description>
    <label>RL Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>