rl_assortment_pkg/force-app/main/default/objects/Product2/fields/SAP_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Number__c</fullName>
    <description>SAP material number for downstream order submission and pricing lookup</description>
    <label>SAP Material Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>